[project]
name = "resoto-plugin-onprem"
description = "Resoto On-Premises Collector Plugin"
version = "4.0.0"
authors = [{name="Some Engineering Inc."}]
license = { text="AGPLv3" }
requires-python = ">=3.9"
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    # Supported python versions
    "Programming Language :: Python :: 3.9",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
readme = {file="README.md", content-type="text/markdown"}

dependencies = [
    "resotolib==4.0.0",
    "paramiko",
]

[project.entry-points."resoto.plugins"]
onprem = "resoto_plugin_onprem:OnpremCollectorPlugin"

[project.urls]
Documentation = "https://resoto.com"
Source = "https://github.com/someengineering/resoto/tree/main/plugins/onelogin"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"


