[project]
name = "resoto-plugin-vsphere"
description = "Resoto VSphere Collector Plugin"
version = "3.6.5"
authors = [{name="Some Engineering Inc."}]
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: Apache Software License",
    # Supported python versions
    "Programming Language :: Python :: 3.9",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
readme = {file="README.md", content-type="text/markdown"}

dependencies = [
    "resotolib==3.6.5",
    "pyvmomi",
]

[project.entry-points."resoto.plugins"]
vsphere = "resoto_plugin_vsphere:VSphereCollectorPlugin"

[project.urls]
Documentation = "https://resoto.com"
Source = "https://github.com/someengineering/resoto/tree/main/plugins/vsphere"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"


