[project]
name = "fixinventory-plugin-vsphere"
description = "Fix VSphere Collector Plugin"
version = "4.0.5"
authors = [{name="Some Engineering Inc."}]
license = {file="LICENSE"}
requires-python = ">=3.11"
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: Apache Software License",
    # Supported python versions
    "Programming Language :: Python :: 3.11",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
readme = {file="README.md", content-type="text/markdown"}

dependencies = [
    "fixinventorylib==4.0.5",
    "pyvmomi",
]

[project.entry-points."fix.plugins"]
vsphere = "fix_plugin_vsphere:VSphereCollectorPlugin"

[project.urls]
Documentation = "https://inventory.fix.security"
Source = "https://github.com/someengineering/fix/tree/main/plugins/vsphere"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"


